Fixes overflow bug

--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -71,11 +71,6 @@ blockquote:after {
   bottom: 0;
 }
 
-#items {
-  overflow: scroll;
-  -webkit-overflow-scrolling: touch;
-}
-
 #items li {
 }
 
@@ -128,10 +123,6 @@ blockquote:after {
 .issue-comment-event .user {
   width: 50px;
   height: 50px;
-}
-
-#container {
-  overflow: hidden;
 }
 
 #menu {
